# book_rating_predictor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.dvc/: config
.github/workflows/: engineering.yml  loading.yml
data/: .gitignore  books.csv  scraped.csv.dvc  scraped2.csv.dvc  scraped2_copy.csv  scraped3.csv.dvc  scraped3_copy.csv  scraped_copy.csv  scraping_progress.csv.dvc
notebooks/: main.ipynb
src/loaders/: data_loader.py
src/models/linear_models/: pca_classifier.py  pca_logistic_classifier.py
src/transformers/: data_transformer.py
src/transformers/utils/: utils.py
tests/loaders/: test_data_loader.py
tests/loaders/fixtures/: fixtures.py
tests/transformers/: test_data_transformer.py
tests/transformers/fixtures/: fixtures.py
