[tool.poetry]
name = "book-rating-predictor"
version = "0.1.0"
description = "A machine learning project focused on predicting books quality."
authors = ["Prince Foli Acouetey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "<2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
mlflow = "^2.19.0"
requests = "^2.32.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
tenacity = "^9.0.0"
circuitbreaker = "^2.0.0"
aiolimiter = "^1.2.1"
nltk = "^3.9.1"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
transformers = "^4.48.1"
torch = { version = "^2.5.1", source = "torch" }
sentence-transformers = "^3.4.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
python-semantic-release = "^9.15.2"
dvc = "^3.58.0"
dvc-s3 = "^3.2.0"
pytest-asyncio = "^0.25.2"
pandera = "^0.22.1"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
changelog_file = "CHANGELOG.md"